Migrated dynamic block and nav to elements widget.

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
 		}
 	},
     "require": {
-        "cmsgears/module-cms": "*"
+		"cmsgears/module-cms": "*",
+		"cmsgears/widget-nav": "*",
+		"cmsgears/widget-block": "*"
     }
 }
